<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1d5697f6">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingTop="4dp"
                android:layout_gravity="center"
                android:text="@string/tv_channel"
                android:textSize="30sp"
                android:textColor="#000000"
                android:textStyle="bold"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:scaleType="centerInside"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:contentDescription="@string/ib_cd_dimension"
                android:src="@drawable/img_stripe"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:background="@drawable/dimensions_frame">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tv_dimensions"
                        android:padding="2dp"
                        android:textSize="24sp"
                        android:textColor="#000000"
                        android:layout_gravity="center"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="#000000"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/et_A_dimension"
                        android:hint="@string/et_enter_a"
                        android:textStyle="italic"
                        android:inputType="number"
                        android:singleLine="true"
                        android:imeOptions="actionDone"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/et_B_dimension"
                        android:hint="@string/et_enter_b"
                        android:textStyle="italic"
                        android:inputType="number"
                        android:singleLine="true"
                        android:imeOptions="actionDone"/>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/et_length"
                        android:hint="@string/et_enter_length"
                        android:textStyle="italic"
                        android:inputType="number"
                        android:imeOptions="actionDone"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_margin="4dp"
                    android:background="@drawable/result_frame">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="2dp"
                        android:text="@string/tv_weight"
                        android:textSize="24sp"
                        android:textColor="#990000"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="#990000"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_weight_result"
                        android:layout_gravity="center"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:text="@string/tv_result"
                        android:textSize="36sp"
                        android:textColor="#990000" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/btn_calculate"
                        android:layout_gravity="center"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:text="@string/btn_calculate" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/btn_clear"
                        android:layout_gravity="center"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:text="@string/btn_clear" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>